infra/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dex-exchange
  labels:
    app.kubernetes.io/part-of: dex-exchange
    environment: production
